; ModuleID = '/home/carl/AnghaBench/vlc/src/modules/extr_bank.c_module_list_get.c'
source_filename = "/home/carl/AnghaBench/vlc/src/modules/extr_bank.c_module_list_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64, %struct.TYPE_9__*, %struct.TYPE_8__* }
%struct.TYPE_9__ = type { %struct.TYPE_9__* }

@vlc_plugins = common dso_local global %struct.TYPE_8__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_9__** @module_list_get(i64* %0) #0 {
  %2 = alloca %struct.TYPE_9__**, align 8
  %3 = alloca i64*, align 8
  %4 = alloca %struct.TYPE_9__**, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca %struct.TYPE_9__**, align 8
  %8 = alloca %struct.TYPE_9__*, align 8
  store i64* %0, i64** %3, align 8
  store %struct.TYPE_9__** null, %struct.TYPE_9__*** %4, align 8
  store i64 0, i64* %5, align 8
  %9 = load i64*, i64** %3, align 8
  %10 = icmp ne i64* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** @vlc_plugins, align 8
  store %struct.TYPE_8__* %13, %struct.TYPE_8__** %6, align 8
  br label %14

14:                                               ; preds = %54, %1
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %16 = icmp ne %struct.TYPE_8__* %15, null
  br i1 %16, label %17, label %58

17:                                               ; preds = %14
  %18 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %4, align 8
  %19 = load i64, i64* %5, align 8
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = add i64 %19, %22
  %24 = mul i64 %23, 8
  %25 = call %struct.TYPE_9__** @realloc(%struct.TYPE_9__** %18, i64 %24)
  store %struct.TYPE_9__** %25, %struct.TYPE_9__*** %7, align 8
  %26 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %7, align 8
  %27 = icmp eq %struct.TYPE_9__** %26, null
  %28 = zext i1 %27 to i32
  %29 = call i64 @unlikely(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %17
  %32 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %4, align 8
  %33 = call i32 @free(%struct.TYPE_9__** %32)
  %34 = load i64*, i64** %3, align 8
  store i64 0, i64* %34, align 8
  store %struct.TYPE_9__** null, %struct.TYPE_9__*** %2, align 8
  br label %62

35:                                               ; preds = %17
  %36 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %7, align 8
  store %struct.TYPE_9__** %36, %struct.TYPE_9__*** %4, align 8
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %38 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %37, i32 0, i32 1
  %39 = load %struct.TYPE_9__*, %struct.TYPE_9__** %38, align 8
  store %struct.TYPE_9__* %39, %struct.TYPE_9__** %8, align 8
  br label %40

40:                                               ; preds = %49, %35
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %42 = icmp ne %struct.TYPE_9__* %41, null
  br i1 %42, label %43, label %53

43:                                               ; preds = %40
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %45 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %4, align 8
  %46 = load i64, i64* %5, align 8
  %47 = add i64 %46, 1
  store i64 %47, i64* %5, align 8
  %48 = getelementptr inbounds %struct.TYPE_9__*, %struct.TYPE_9__** %45, i64 %46
  store %struct.TYPE_9__* %44, %struct.TYPE_9__** %48, align 8
  br label %49

49:                                               ; preds = %43
  %50 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %51 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %50, i32 0, i32 0
  %52 = load %struct.TYPE_9__*, %struct.TYPE_9__** %51, align 8
  store %struct.TYPE_9__* %52, %struct.TYPE_9__** %8, align 8
  br label %40

53:                                               ; preds = %40
  br label %54

54:                                               ; preds = %53
  %55 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %56 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %55, i32 0, i32 2
  %57 = load %struct.TYPE_8__*, %struct.TYPE_8__** %56, align 8
  store %struct.TYPE_8__* %57, %struct.TYPE_8__** %6, align 8
  br label %14

58:                                               ; preds = %14
  %59 = load i64, i64* %5, align 8
  %60 = load i64*, i64** %3, align 8
  store i64 %59, i64* %60, align 8
  %61 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %4, align 8
  store %struct.TYPE_9__** %61, %struct.TYPE_9__*** %2, align 8
  br label %62

62:                                               ; preds = %58, %31
  %63 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %2, align 8
  ret %struct.TYPE_9__** %63
}

declare dso_local i32 @assert(i32) #1

declare dso_local %struct.TYPE_9__** @realloc(%struct.TYPE_9__**, i64) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @free(%struct.TYPE_9__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
